# Fine-Tune-DataSet

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALL_GUIDE.md  LICENSE  LOCAL_FINETUNING_COMPLETE_GUIDE.md  LOCAL_SETUP_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  colab_finetuning.ipynb  generate_test_token.py  init_db.py  modelops.db  package-lock.json  pyproject.toml  qlora_config.json  requirements.txt  run_all.bat  setup_folders.py  simple_db_test.py  simple_test.py  start_api.py  test_api.py  test_database.py  test_gpt2_finetuning.py  test_integration.py  test_job_columns.py
alembic/: env.py
api/: __init__.py
api/auth/: jwt_handler.py  permissions.py
api/gateway/: __init__.py  middleware.yml  traefik.yml
api/rest/: artifacts.py  colab.py  datasets.py  inference.py  jobs.py  (+4 more)
artifacts/: __init__.py
cli/: __init__.py  main.py
data/: datasets.duckdb
data_management/: __init__.py
db/: database.py  models.py  repository.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
monitoring/: __init__.py  metrics_collector.py
platform/: __init__.py
plugins/: __init__.py  base.py  registry.py
scripts/: init_database.py  init_db.py  start_local_platform.py
sdk/: __init__.py  client.py
security/: __init__.py
services/: __init__.py  dataset_registry.py  model_registry.py  training_orchestrator.py
storage/: __init__.py  delta_lake_client.py  duckdb_client.py  lancedb_client.py  minio_client.py  postgres_client.py
test_keys/: keys_metadata.json  master.key  test_key.key
tests/: __init__.py  test_api.py  test_storage.py
workflows/: __init__.py  temporal_client.py  worker.py
(+72 files in other folders)
